# kaya-scripts

./: README.md  kaya.md  slurm.conf
kaya-install/: .gitignore  pyproject.toml
kaya-install/kaya_install/: __main__.py  cli.py  julia.py  mamba.py  utils.py
modules/: 1.10.2  README.md  activate-env  juliaup  launch-env  mamba  micromamba
modules/envs/: someenv
modules/julia/: 1.10.2
profile.d/: README.md  Zjulia.sh  mamba.sh
scripts/: bashrc  chpasswd.py  conny.sh  doall.sh  exe-install.py  install-bashrc.sh  signal.py  sigtest.py  slurm.py  ssh-deny.sh  ssh-functions.sh  ssh-key-install.sh  ssh-keygen.sh
slurm/: checkpoint.slurm  fetch.slurm  julia.slurm  mamba-alt.slurm  mamba-load.slurm  mamba.slurm  mamba2.slurm  mamba3.slurm  slurm.conf
