[project]
name = "kaya-install"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies =[
    "click>=8.2.1",
]
[project.scripts]
kaya = "kaya_install.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
